# tui-shader

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/character-rule/: main.rs
examples/color-rule/: main.rs
examples/demo/: demo.tape  main.rs
examples/hello-shader/: Cargo.toml  README.md  hello-shader.tape  main.rs
examples/hello-shader/src/: main.rs  shader.wgsl
examples/pipe-into/: README.md  main.rs  pipe-into.tape  stylize-other-widget.tape
examples/shadertuiy/: main.rs  shadertuiy.tape
examples/style-rule/: main.rs  style-rule.tape
examples/stylize-other-widget/: Cargo.toml  README.md  main.rs  stylize-other-widget.tape
examples/stylize-other-widget/src/: main.rs  shader.wgsl
examples/tutorial/: main.rs
shaders/: dither.wgsl  gradient.wgsl  starlight.wgsl  tutorial.wgsl  voronoi.wgsl
src/: canvas.rs  context.rs  lib.rs  sample.rs  shader_canvas.rs  state.rs  style.rs  util.rs  wgpu_context.rs
src/backend/: cpu.rs  mod.rs  wgpu.rs
src/shaders/: default_fragment.wgsl  fullscreen_vertex.wgsl  test_fragment.wgsl
tui-shader/: Cargo.toml
tui-shader/src/: lib.rs
