[package]
name = "tui-shader"
authors = ["Paul Mattern <mail@paulmattern.dev>"]
documentation = "https://docs.rs/tui-shader/latest/tui_shader/"
version = "0.0.6"
edition = "2021"
categories = ["graphics", "rendering", "gui"]
description = "A ratatui widget that renders a fragment shader in the terminal"
homepage = "https://github.com/pemattern/tui-shader"
repository = "https://github.com/pemattern/tui-shader"
keywords = ["tui", "shader", "wgpu", "terminal", "graphics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.83.0"
exclude = ["assets/", ".github/"]

[dependencies]
bytemuck = "1.21.0"
flume = "0.11.1"
pollster = "0.4.0"
wgpu = "24.0.1"
ratatui = "0.29.0"

[dev-dependencies]
rand = "0.9.0"
tui-big-text = "0.7.1"

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[[example]]
name = "style-rule"
path = "examples/style-rule/main.rs"

[[example]]
name = "hello-shader"
path = "examples/hello-shader/main.rs"

[[example]]
name = "pipe-into"
path = "examples/pipe-into/main.rs"

[[example]]
name = "stylize-other-widget"
path = "examples/stylize-other-widget/main.rs"
