[package]
name = "tui-shader"
version = "0.0.10"
edition = "2024"
rust-version = "1.88.0"
description = "A ratatui widget that renders a fragment shader in the terminal"
documentation = "https://docs.rs/tui-shader/latest/tui_shader/"
readme = "README.md"
homepage = "https://github.com/pemattern/tui-shader"
repository = "https://github.com/pemattern/tui-shader"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "shader", "terminal", "tui", "wgpu"]
categories = ["graphics", "gui", "rendering"]
exclude = [".github/", "assets/"]

[[example]]
name = "shadertuiy"
path = "examples/shadertuiy/main.rs"

[[example]]
name = "character-rule"
path = "examples/character-rule/main.rs"

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[[example]]
name = "style-rule"
path = "examples/style-rule/main.rs"

[[example]]
name = "hello-shader"
path = "examples/hello-shader/main.rs"

[[example]]
name = "pipe-into"
path = "examples/pipe-into/main.rs"

[[example]]
name = "tutorial"
path = "examples/tutorial/main.rs"

[[example]]
name = "stylize-other-widget"
path = "examples/stylize-other-widget/main.rs"

[dependencies]
bytemuck = "1.25.0"
flume = "0.12.0"
pollster = "0.4.0"
ratatui-core = "0.1.0"
wgpu = "27.0.1"

[dev-dependencies]
rand = "0.9.0"
ratatui = "0.30.0"
tui-big-text = "0.8.4"
tui-textarea-2 = "0.10.2"
