[package]
name = "tui-shader"
authors.workspace = true
documentation.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
flume.workspace = true
pollster.workspace = true
ratatui.workspace = true
wgpu.workspace = true
